<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.danielflower.apprunner</groupId>
    <artifactId>app-runner-router-project</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>app-runner-router-lib</module>
        <module>app-runner-router</module>
    </modules>

    <name>App Runner Router</name>
    <description>A reverse proxy for AppRunner that allows you horizontally scale AppRunner</description>
    <url>https://github.com/danielflower/app-runner-router</url>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <ciManagement>
        <system>Github Actions</system>
        <url>https://github.com/danielflower/app-runner-router/actions</url>
    </ciManagement>

    <scm>
        <url>https://github.com/danielflower/app-runner-router</url>
        <connection>scm:git:git@github.com:danielflower/app-runner-router.git</connection>
    </scm>

    <inceptionYear>2016</inceptionYear>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/danielflower/app-runner-router/issues</url>
    </issueManagement>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Daniel Flower</name>
            <organizationUrl>https://github.com/danielflower</organizationUrl>
        </developer>
    </developers>

    <build>
        <plugins>
            <plugin>
                <groupId>com.github.danielflower.mavenplugins</groupId>
                <artifactId>multi-module-maven-release-plugin</artifactId>
                <version>3.6.4</version>
                <configuration>
                    <releaseGoals>
                        <releaseGoal>clean</releaseGoal>
                        <releaseGoal>deploy</releaseGoal>
                    </releaseGoals>
                    <releaseProfiles>
                        <releaseProfile>release</releaseProfile>
                        <releaseProfile>gpg</releaseProfile>
                    </releaseProfiles>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.8.1</version>
                <executions>
                    <execution>
                        <id>analyze</id>
                        <goals>
                            <goal>analyze-only</goal>
                        </goals>
                        <configuration>
                            <failOnWarning>true</failOnWarning>
                            <ignoreNonCompile>true</ignoreNonCompile>
                            <outputXML>true</outputXML>
                        </configuration>
                    </execution>
                    <execution>
                        <goals>
                            <!-- This is for the e2e tests - the apprunner uber jar is copied into a test dir -->
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>com.danielflower.apprunner</groupId>
                                    <artifactId>app-runner</artifactId>
                                    <version>RELEASE</version> <!-- the newest version -->
                                    <outputDirectory>target/e2e</outputDirectory>
                                    <destFileName>app-runner-latest.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>com.danielflower.apprunner</groupId>
                                    <artifactId>app-runner</artifactId>
                                    <version>1.2.2</version> <!-- the oldest supported JDK8 version -->
                                    <outputDirectory>target/e2e</outputDirectory>
                                    <destFileName>app-runner-1.2.2.jar</destFileName>
                                </artifactItem>
                                <artifactItem>
                                    <groupId>com.danielflower.apprunner</groupId>
                                    <artifactId>app-runner</artifactId>
                                    <version>2.3.1</version> <!-- the oldest supported JDK11 version -->
                                    <outputDirectory>target/e2e</outputDirectory>
                                    <destFileName>app-runner-2.3.1.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>
    </profiles>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>